# shaket

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: docs.json  index.mdx  quickstart.mdx
examples/: powerbank_negotiation.py  powerbank_negotiation_llm.py  powerbank_reverse_auction.ipynb  powerbank_reverse_auction.py
src/agents/: __init__.py  base.py
src/client/: client.py
src/coordinators/: negotiation.py  reverse_auction.py
src/core/: __init__.py  types.py
src/protocol/: __init__.py  messages.py
src/server/: __init__.py  server.py
src/shaket/: __init__.py
src/shaket/agents/: actions.py
src/shaket/client/: __init__.py  client.py  llm_tool_schemas.json
src/shaket/coordinators/: __init__.py  base.py  negotiation.py  reverse_auction.py
src/shaket/core/: types.py
src/shaket/server/: agent_card.py  agent_executor.py  server.py
src/shaket/shaket_layer/: connection_manager.py  message_parser.py  session_messenger.py
src/shaket/state/: __init__.py  events.py  session_state.py  state_manager.py
src/shaket_layer/: __init__.py
src/state/: events.py  state_manager.py
