[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shaket"
version = "0.1.0"
description = "An open protocol for multi-agent negotiation and auction"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Shaket Labs", email = "admin@shaket.xyz"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.5.0",
    "uvicorn>=0.27.0",
    "fastapi>=0.95.0",
    "python-dotenv",
    "a2a-sdk[http-server]>=0.3.0",
]

[project.optional-dependencies]
examples = [
    "litellm",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["shaket*"]
